# paprika-mcp

./: .env.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements.txt  specs.md
specs/300-meal-planning/: plan.md  specs.md
src/: audit.py  config.py  oauth_app.py  paprika_client.py  server.py
tests/: test_add_recipe_to_grocery_list.py  test_error_handling.py  test_meal_planning.py  test_paprika_client.py  test_paprika_live.py  test_recipe_cache.py  test_remove_grocery_item.py
